Twitter rendering removed for media query selected sizes. Renders nonetheless on the main site size. Also fixed masses of whitespace being generated in document.

--- a/css/style.less
+++ b/css/style.less
@@ -420,7 +420,6 @@ box-shadow: 0px 0px 5px @gray;
     height: 100%;
       body { 
           font-family: "futura-pt-1","futura-pt-2", sans-serif;
-          height: 100%; 
           height: 100%;
           overflow:hidden;
           margin: 0; 
@@ -879,6 +878,8 @@ box-shadow: 0px 0px 5px @gray;
                 }
             }
     body{
+          height: 100%;
+          overflow:hidden;
 //        display:none;
   overflow:hidden;
   
